Amended layout of store online products to display rows of 4 products on medium/large screen sizes; rows of 2 products on small screen sizes and separate rows for each product (i.e. all products listed in one column) the setting used is col-xs-12 col-sm-6 col-md-3. In order for users to get full access to all online products, no products have been hidden for smaller screens, but the full display of all products on smaller screens could not fit on the background. To fix this the page's background-size setting has now been set to cover. I checked through other pages on the website and used this setting for the background. For the music page, each song title listed has now been amended to be a link on the page, which when clicked opens the picture of the album/track cover for the song title ( in a new tab).

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -57,7 +57,6 @@ html {overflow-x: hidden;}
     .background {padding-left: 100px; align-items: center;}
     .thumbnail {padding-left: 7px; height: 170px; width: 150px;}
     .media-left {padding-bottom: 15px;}
-}
     
 }
 
@@ -222,7 +221,7 @@ html {overflow-x: hidden;}
 /*--------------------------------------------music.html body Settings*/
 .background-music {
     text-align: center;
-    height: 360vh;
+    background-size: cover;
     background-color: lightgray;
     padding-top: 75px;
     padding-bottom: 15px;
@@ -302,7 +301,7 @@ html {overflow-x: hidden;}
 /*--------------------------------------------photos.html body Settings*/
 .background-photos {
     text-align: center;
-    height: 240vh;
+    background-size: cover;
     background-color: lightgray;
     align-items: center;
     padding-top: 75px;
@@ -311,7 +310,7 @@ html {overflow-x: hidden;}
 
 /*--------------------------------------------events.html body Settings*/
 .tours-container {
-    height: 300vh;
+    background-size: cover;
     background-color: lightgray;
     align-items: center;
     padding-top: 75px;
@@ -335,7 +334,7 @@ html {overflow-x: hidden;}
 .background-store {
     text-align: center;
     align-items: center;
-    height: 650vh;
+    background-size: cover;
     background-color: lightgray;
     padding-top: 75px;
 }
@@ -356,40 +355,41 @@ html {overflow-x: hidden;}
     height: 475px;
     width: 300px;
     margin-bottom: 50px;
+    font-size: small;
 }
 
 .store-row-first {
-    width: 1300px;
+    width: auto;
     padding-top: 10px;
     padding-bottom: 15px;
 }
 
 .store-row-second {
-    width: 1300px;
+    width: auto;
     padding-top: 10px;
     padding-bottom: 15px;
 }
 
 .store-row-third {
-    width: 1300px;
+    width: auto;
     padding-top: 10px;
     padding-bottom: 15px;
 }
 
 .store-row-fourth {
-    width: 1300px;
+    width: auto;
     padding-top: 10px;
     padding-bottom: 15px;
 }
 
 .store-row-fifth {
-    width: 1300px;
+    width: auto;
     padding-top: 10px;
     padding-bottom: 15px;
 }
 
 .store-row-sixth {
-    width: 1300px;
+    width: auto;
     padding-top: 10px;
     padding-bottom: 15px;
 }
@@ -530,7 +530,7 @@ nav {
     background-image: url(/assets/images/footer_background.jpg);
     position: relative;
     opacity: 0.85;
-    height: 225px;
+    background-size: cover;
 }
 
 .important-info,
